--- a/public/style.css
+++ b/public/style.css
@@ -2,14 +2,12 @@
 
 body {
     font-family: sans-serif;
-    font-size: 16px;
     line-height: 1.4;
-    font-weight: normal;
     color: #444;
 
-    margin: 0 auto;
-    padding: 0 10px;
-    max-width: 800px;
+    margin: auto;
+    padding: 0 15px;
+    max-width: 50em;
 }
 
 /* Headings */
@@ -46,7 +44,7 @@ a:hover {
 
 ul.l1, ul.l2 {
     list-style-type: none;
-    padding-left: 0px;
+    padding-left: 0;
 }
 
 ul.l1 > li {
