style - center terminal

--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
     --black1:  #282C34; --black2:  #2c3039;
     --grey1:   #4b5263; --grey2:   #5C6370;
     --red1:    #C84065; --red2:    #F26C91;
-    --yellow1: #E5C07B; --yellow2: #D19A66;
+    --yellow1: #D19A66; --yellow2: #E5C07B;
     --blue1:   #6985D7; --blue2:   #A2C1F5;
     --green1:  #80D468; --green2:  #A3F2A0;
     --purple1: #C86AD4; --purple2: #D2A2F5;
@@ -15,7 +15,6 @@ body {
     font-family: monospace;
     color: var(--white);
 }
-
 
 a {
     color: var(--purple2);
@@ -33,8 +32,10 @@ a:hover {
 
 /* Terminal */
 .terminal {
-    background-color: var(--black2);
+    background: var(--black2);
     border: 1px dashed var(--white);
+    max-width: 100ch;
+    margin: auto;
 }
 
 .terminal > * {
@@ -47,7 +48,6 @@ a:hover {
 }
 
 .terminal pre {
-    max-width: 80ch;
     white-space: pre-wrap;
     word-wrap: break-word;
 }
