--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Obsidienne - $pagetitle$</title>
     <link rel="stylesheet" href="/assets/style.css">
+    <link rel="icon" type="image/png" href="/assets/favicon.png">
 </head>
 
 <body>
