style - preview tooltip

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -39,6 +39,18 @@ a {
     color: $purple2;
     text-decoration: none;
     &:hover { text-decoration: underline; }
+
+    img.preview {
+        display: none;
+        position: absolute;
+        z-index: 1;
+        margin: 0 1em;
+        max-width: 200px;
+        max-height: 200px;
+        background: $grey1;
+        border: 1px solid $white;
+    }
+    &:hover img.preview { display: inline-block; }
 }
 
 svg.icon {
