graphics - magitekc1 - comments (inspiration)

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 │   ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
 │   └── <a href="https://github.com/ObsidianWitch">github.com</a>
 └── <svg class="icon"><use href="/assets/feather.svg#image"/></svg> Graphics
-    └── <a href="/assets/magitek/circle1.svg">magic circle<img class="preview" src="/assets/magitek/circle1.svg"/></a>
+    └── <a href="/assets/magitek/circle1.svg">midchildan magic circle<img class="preview" src="/assets/magitek/circle1.svg"/></a>
 </pre>
 
 <h1>Posts</h1>
