style - rm preview & index - rm gitlab snippets

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 
 <pre class="sourceCode">
 ├── <svg class="icon"><use href="/assets/feather.svg#git-branch"/></svg> Repositories
-│   ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a> (<a href="https://gitlab.com/users/Obsidienne/snippets">snippets</a>)
+│   ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
 │   └── <a href="https://github.com/ObsidianWitch">github.com</a>
 └── <svg class="icon"><use href="/assets/feather.svg#image"/></svg> Graphics
-    └── <a href="/assets/magitek/circle1.svg">midchildan magic circle<img class="preview" src="/assets/magitek/circle1.svg"/></a>
+    └── <a href="/assets/magitek/circle1.svg">magic circle</a>
 </pre>
 
 <h1>Posts</h1>
