--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
 <h1>Projects</h1>
 
 <pre class="sourceCode">
-├── <svg class="icon"><use href="/assets/feather.svg#git-branch"/></svg> Repositories
-│   ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
-│   └── <a href="https://github.com/ObsidianWitch">github.com</a>
-└── <svg class="icon"><use href="/assets/feather.svg#image"/></svg> Graphics
-    └── <a href="/assets/magitek/circle1.svg">magic circle</a>
+└── <svg class="icon"><use href="/assets/feather.svg#git-branch"/></svg> Repositories
+    ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
+    └── <a href="https://github.com/ObsidianWitch">github.com</a>
 </pre>
 
 <h1>Posts</h1>
