--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,1 +1,145 @@
-body{background:#2b303b url("bg.svg");font-family:monospace;line-height:1.6;color:#a7afbe}p{text-align:justify}a{color:#d9a1e8;text-decoration:none}a:hover{text-decoration:underline}svg.icon{width:0.95em;height:0.95em;vertical-align:-0.125em;fill:none;stroke:currentColor;stroke-width:2}main{background:#2b303b;border:1px solid #a7afbe;margin:auto;padding:0 1em;max-width:90ch}main>header{font-size:2em;font-variant:small-caps;border-bottom:1px solid #d9a1e8}main>header a:hover{text-decoration:none}h1,h2,h3,h4,h5,h6{line-height:normal;font-weight:normal}article header h1{font-weight:bold;margin-bottom:0}article header time{color:#576175}nav{background:#272c35;border:1px solid #a7afbe;margin:1em 0;padding:0 1em}nav ul,nav ol{list-style-type:none;padding:0}blockquote{background:none;border:none;margin:1em 0;padding:0 1em;border-left:4px solid #a7afbe}blockquote.info{border-color:#61afef}blockquote.warning{border-color:#e2b86a}blockquote.error{border-color:#c84d41}code{background:#363d49;border:1px solid #576175}code a.sourceLine{color:inherit;text-decoration:none}code .ch,code .sc,code .st,code .ss,code .vs{color:#98c379}code .cn,code .bn,code .dv,code .fl{color:#e2b86a}code .co,code .cv,code .do{color:#576175}code .fu,code .an,code .at,code .ex{color:#61afef}code .bu,code .im,code .pp,code .dt,code .kw,code .cf{color:#c978dd}code .va,code .op,code .ot{color:#d37269}pre{white-space:pre-wrap;word-break:break-word}pre.sourceCode{background:#272c35;border:1px solid #a7afbe;margin:1em 0;padding:1em}pre code{background:inherit;border:none}
+:root {
+    --white:   hsl(220, 15%, 70%);
+    --grey1:   hsl(220, 15%, 25%); --grey2:   hsl(220, 15%, 40%);
+    --black1:  hsl(220, 15%, 18%); --black2:  hsl(220, 15%, 20%);
+    --red1:    hsl(  5, 55%, 52%); --red2:    hsl(  5, 55%, 62%);
+    --yellow1: hsl( 39, 67%, 65%); --yellow2: hsl( 39, 67%, 75%);
+    --blue1:   hsl(207, 82%, 66%); --blue2:   hsl(207, 82%, 76%);
+    --green1:  hsl( 95, 38%, 62%); --green2:  hsl( 95, 38%, 72%);
+    --purple1: hsl(288, 60%, 67%); --purple2: hsl(288, 60%, 77%);
+}
+
+body {
+    background: var(--black2) url("bg.svg");
+    font-family: monospace;
+    line-height: 1.6;
+    color: var(--white);
+}
+
+p {
+    text-align: justify;
+}
+
+a {
+    color: var(--purple2);
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+svg.icon {
+    width: 0.95em;
+    height: 0.95em;
+    vertical-align: -0.125em;
+    fill: none;
+    stroke: currentColor;
+    stroke-width: 2;
+}
+
+main {
+    background: var(--black2);
+    border: 1px solid var(--white);
+    margin: auto;
+    padding: 0 1em;
+    max-width: 90ch;
+}
+main > header {
+    font-size: 2em;
+    font-variant: small-caps;
+    border-bottom: 1px solid var(--purple2);
+}
+main > header a:hover {
+    text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    line-height: normal;
+    font-weight: normal;
+}
+
+article header h1 {
+    font-weight: bold;
+    margin-bottom: 0;
+}
+article header time {
+    color: var(--grey2);
+}
+
+nav {
+    background: var(--black1);
+    border: 1px solid var(--white);
+    margin: 1em 0;
+    padding: 0 1em;
+}
+nav ul, nav ol {
+    list-style-type: none;
+    padding: 0;
+}
+
+blockquote {
+    background: none;
+    border: none;
+    margin: 1em 0;
+    padding: 0 1em;
+    border-left: 4px solid var(--white);
+}
+blockquote.info {
+    border-color: var(--blue1);
+}
+blockquote.warning {
+    border-color: var(--yellow1);
+}
+blockquote.error {
+    border-color: var(--red1);
+}
+
+code {
+    background: var(--grey1);
+    border: 1px solid var(--grey2);
+}
+code a.sourceLine {
+    color: inherit;
+    text-decoration: none;
+}
+/* char, specialchar, string, specialstring, verbatimstring */
+code .ch, code .sc, code .st, code .ss, code .vs {
+    color: var(--green1);
+}
+/* constant, basen, decval, float */
+code .cn, code .bn, code .dv, code .fl {
+    color: var(--yellow1);
+}
+/* comment, commentvar, documentation */
+code .co, code .cv, code .do {
+    color: var(--grey2);
+}
+/* function, annotation, attribute, extension */
+code .fu, code .an, code .at, code .ex {
+    color: var(--blue1);
+}
+/* builtin, import, preprocessor, datatype, keyword, controlflow */
+code .bu, code .im, code .pp, code .dt, code .kw, code .cf {
+    color: var(--purple1);
+}
+/* variable, operator, other */
+code .va, code .op, code .ot {
+    color: var(--red2);
+}
+/* alert, error, information, warning */
+code .al, code .er, code .in, code .wa {}
+
+pre {
+    white-space: pre-wrap;
+    word-break: break-word;
+}
+pre.sourceCode {
+    background: var(--black1);
+    border: 1px solid var(--white);
+    margin: 1em 0;
+    padding: 1em;
+}
+pre code {
+    background: inherit;
+    border: none;
+}
