--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -6,7 +6,7 @@ Repositories
 └── <a href="https://github.com/ObsidianWitch">github.com</a>
 </pre>
 
-<h1>Posts</h1>
+<h1>Posts<a class="muted" href="/rss.xml">[RSS]</a></h1>
 
 <nav class="posts"><ul>
 $for(post)$
