style - bg reduce hexagon size (3/4)

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -11,6 +11,7 @@
 
 body {
     background: var(--black2) url("bg.svg");
+    background-size: 27px;
     font-family: monospace;
     line-height: 1.6;
     color: var(--white);
