--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -4,6 +4,8 @@
 Repositories
 ├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
 └── <a href="https://github.com/ObsidianWitch">github.com</a>
+Graphics
+└── <a href="/assets/magitek1.svg">SVG magitek animation</a>
 </pre>
 
 <h1>Posts<a class="muted" href="/rss.xml">[RSS]</a></h1>
