--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,17 +1,20 @@
-<h1>Projects</h1>
+<h1>Repositories</h1>
 
-<pre class="sourceCode">
-Repositories
-├── <a href="https://gitlab.com/Obsidienne">gitlab.com</a>
-└── <a href="https://github.com/ObsidianWitch">github.com</a>
-Graphics
-└── <a href="/assets/magitek1.svg">SVG magitek animation</a>
-</pre>
+<ul>
+<li><a href="https://gitlab.com/Obsidienne">gitlab.com</a></li>
+<li><a href="https://github.com/ObsidianWitch">github.com</a></li>
+</ul>
+
+<h1>Graphics</h1>
+
+<ul>
+<li><a href="/assets/magitek1.svg">SVG magitek animation</a></li>
+</ul>
 
 <h1>Posts<a class="muted" href="/rss.xml">[RSS]</a></h1>
 
-<nav class="posts"><ul>
+<ul>
 $for(post)$
 <li><date>$post.date$</date> <a href="$post.path$">$post.title$</a></li>
 $endfor$
-</ul></nav>
+</ul>
