--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -11,7 +11,7 @@
 <li><a href="/assets/magitek1.svg">SVG magitek animation</a></li>
 </ul>
 
-<h1>Posts<a class="muted" href="/rss.xml">[RSS]</a></h1>
+<h1>Posts · <a href="/rss.xml">RSS</a></h1>
 
 <ul>
 $for(post)$
